--- a/src/css/layout/product-slider.css
+++ b/src/css/layout/product-slider.css
@@ -82,7 +82,7 @@
     height: 32px;
     border: none;
     background-color: var(--brown-color);
-    background-image: url(../images/icons/search.svg);
+    background-image: url(/images/icons/search.svg);
     background-repeat: no-repeat;
     background-position: 50%;
     cursor: pointer
