--- a/src/css/layout/response.css
+++ b/src/css/layout/response.css
@@ -145,6 +145,10 @@
 }
 
 @media(max-width:576px) {
+    .response-prev,
+    .response-next {
+        display: none !important;
+    }
 
     .response__content-name,
     .response__content-title {
