--- a/src/css/layout/product-slider.css
+++ b/src/css/layout/product-slider.css
@@ -77,7 +77,7 @@
 .product-slider__search-btn {
     position: absolute;
     top: 8px;
-    right: 8px;
+    right: 24px;
     width: 32px;
     height: 32px;
     border: none;
@@ -111,6 +111,11 @@
 }
 
 @media(max-width:768px) {
+    .product-slider-prev,
+    .product-slider-next {
+        display: none !important;
+    }
+
     .product-slider__form {
         margin-bottom: 20px
     }
@@ -131,13 +136,12 @@
 }
 
 @media(max-width:576px) {
-    .product-slider-prev,
-    .product-slider-next {
-        display: none !important;
-    }
-
     .product-slider__form,
     .product-slider__input {
         width: 100%
+    }
+
+    .product-slider__search-btn {
+        right: 0px;
     }
 }
